# desolver

./: .bettercodehub.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AVAILABLE_METHODS.rst  CHANGELOG.md  CHANGELOG.rst  Documentation.txt  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  REFERENCES.rst  build-requirements.txt  conftest.py  integrator.py  meta.yaml  ode.py  odesolver.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: publish-pypi.yml  publish-to-test-pypi.yml  pytest-ubuntu.yml
DESolver/: __init__.py  differentialsystem.py  odesolver.py
Examples/: integrator.py  test1.py  test_numpy.py  test_torch.py
desolver/: __init__.py  differential_system.py  differentialsystem.py  integrationMethods.py  integrator.py  test.py  test2.py
desolver/backend/: __init__.py  autoray_backend.py  common.py  load_backend.py  numpy_backend.py  pyaudi_backend.py  torch_backend.py
desolver/backend/tests/: backend_test_utility.py  test_backend.py  test_numpy_backend.py  test_pyaudi_backend.py  test_torch_backend.py
desolver/exception_types/: __init__.py  exception_types.py
desolver/exception_types/tests/: __init__.py  test_exception_types.py
desolver/exceptiontypes/: __init__.py  exceptiontypes.py
desolver/integration_schemes/: __init__.py  integration_schemes.py  integrator_template.py  integrator_types.py
desolver/integrationschemes/: __init__.py  integrationschemes.py  integrator_template.py
desolver/integrators/: __init__.py  explicit_integration_schemes.py  implicit_integration_schemes.py  integration_schemes.py  integrator_template.py  integrator_types.py  utilities.py
desolver/integrators/components/: __init__.py  runge_kutta_methods.py
desolver/integrators/tests/: test_integrators.py
desolver/symbolic/: __init__.py  gen_auto.py  symbolic.py  symbolic_funcs.py
desolver/tests/: __init__.py  common.py  test_dense_output.py  test_differential_system.py  test_event_detection.py  test_float_formats.py  test_getters_setters.py  test_numpy.py  test_pyaudi.py  test_torch.py  test_torch_gradients.py
desolver/torch_ext/: __init__.py  integrators.py
desolver/torch_ext/tests/: test_differentiability.py
desolver/utilities/: __init__.py  interpolation.py  optimizer.py  utilities.py
desolver/utilities/tests/: common.py  test_interpolation.py  test_optimizer.py  test_utilities.py
docs/: conf.py  desolver.exception_types.rst  desolver.integrators.rst  desolver.rst  desolver.utilities.rst  documentation.rst  examples.rst  index.rst  installation.rst  modules.rst  numpy.rst  pyaudi.rst  pytorch.rst  quickstart.rst  requirements.txt
docs/examples/: getting_started.py
docs/examples/numpy/: Example 1 - NumPy - Simple Harmonic Oscillator.ipynb  Example 2 - NumPy - Duffing Oscillator.ipynb  Example 3 - NumPy - N-Body Systems.ipynb
docs/examples/pyaudi/: Example 1 - PyAudi - Differential Intelligence.ipynb  Example 2 - PyAudi - Differential Intelligence - Vectorised Duals.ipynb  Example 3 - PyAudi - Differential Intelligence - Quadruple Precision Integration.ipynb  Example 4 - PyAudi - High Order Taylor Maps I.ipynb  Example 5 - PyAudi - High Order Taylor Maps II.ipynb  PyAudi - Differential Intelligence.ipynb  PyAudi - High Order Taylor Maps I.ipynb  PyAudi - High Order Taylor Maps II.ipynb
docs/examples/pytorch/: Example 1 - PyTorch - Duffing Oscillator.ipynb  Example 2 - PyTorch - Neural Network.ipynb
examples/pyaudi/: PyAudi - Differential Intelligence - Quadruple Precision Integration.ipynb  PyAudi - Differential Intelligence - Vectorised Duals.ipynb  PyAudi - Differential Intelligence.ipynb  PyAudi - High Order Taylor Maps I.ipynb  PyAudi - High Order Taylor Maps II.ipynb
tests/: exception_tests.py  test_numpy.py  test_torch.py  utility_tests.py
tests/backend_tests/: backend_test_utility.py  numpy_backend.py  torch_backend.py
tests/interface_tests/: numpy_basic.py  numpy_getter_setter_tests.py  torch_basic.py  torch_getter_setter_tests.py
tests/misc/: torch_gradients.py
